--- a/BlazorLearningKickOff/Client/Pages/Counter.razor
+++ b/BlazorLearningKickOff/Client/Pages/Counter.razor
@@ -1,16 +1,94 @@
 ﻿@page "/counter"
+@using System.Threading
 
 <h1>Counter</h1>
 
-<p>Current count: @currentCount</p>
+<p>
+<span class="@backgroundColor">Current count: @currentCount</span>
+    </p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button disabled="@(currentCount>=10)" class="btn btn-primary" 
+@onclick="IncrementCount">Click me</button>
+<button class="btn btn-success" @onclick="@(()=> currentCount+=1)">
+    This is another button with LamdaExpression
+</button>
+<input type="number" @bind="@incrementer"/>
+<div>Using Verbose solution</div>
+<input type="number" value="@incrementer"
+ @onchange="@((ChangeEventArgs e)=> incrementer  = int.Parse($"{e.Value}"))"/>
+<button class="btn btn-warning" @onclick="@AutoIncrement">Auto Increment</button>
+ <div>Now Look at the bind event information</div>
+ <input type="number" @bind="@incrementer" @bind:event="oninput"/>
+ <div>Prevent Default problem</div>
+ <input type="number" @bind="@incrementer" @onkeypress="KeyHandler" />
+ <div>Prevent Default solution event preventDefault</div>
+ <input type="number" @bind="@incrementer" @onkeypress="KeyHandler" 
+ @onkeypress:preventDefault="true" />
+ <div>or</div>
+ <input type="number" @bind="@incrementer" @onkeypress="KeyHandler" 
+ @onkeypress:preventDefault />
+
+<div>
+    Stop Propation Issue
+    <div style="width:400px;height:400px;background:yellow" @onmousemove="@OuterMouseMove">
+        @outerPos
+        <div style="width:300px;height:300px;background: green; margin:50px" @onmousemove="@InnerMouseMove">
+            @innerPos
+            </div>
+    </div>    
+    </div>
+    <div>
+    Stop Propation Issue solution event stop propagation
+    <div style="width:400px;height:400px;background:yellow" @onmousemove="@OuterMouseMove">
+        @outerPos
+        <div style="width:300px;height:300px;background: green; margin:50px" 
+        @onmousemove="@InnerMouseMove"
+        @onmousemove:stopPropagation>
+            @innerPos
+            </div>
+    </div>    
+    </div>
+
+    <div>Date Formats </div>
+<input @bind="@Today" @bind:format="dd-MMM-yyyy" />
+<button class="btn btn-danger" @onclick="@IncrementDate" >Add Days</button>
 
 @code {
     private int currentCount = 0;
-
+    private int incrementer=1;
+    private string outerPos="Nothing Yet !";
+    private string innerPos="Nothing Yet !";
+private DateTime Today{get;set;}=DateTime.Now;
+string backgroundColor="red-background";
     private void IncrementCount()
     {
         currentCount++;
+        currentCount+=incrementer;
+        incrementer++;
+        backgroundColor=(currentCount%2==0)?"red-background":"yellow-background";
     }
+    private void KeyHandler(KeyboardEventArgs e)
+    {
+        Console.WriteLine(e.Key);
+        if(e.Key=="+")
+        {
+            incrementer+=1;
+        }
+        if(e.Key=="-")
+        {
+            incrementer-=1;
+        }
+    }
+    private void OuterMouseMove(MouseEventArgs e)=> outerPos=$"Mouse Move Last at {e.ClientX} x {e.ClientY}";
+    private void InnerMouseMove(MouseEventArgs e)=> innerPos=$"Mouse Move Last at {e.ClientX} x {e.ClientY}";
+private void IncrementDate()=> Today=Today.AddDays(1);
+private void AutoIncrement()
+{
+    var timer=new Timer(
+        callback: (_)=> {IncrementCount();this.StateHasChanged();},
+        state:null,
+        dueTime:TimeSpan.FromSeconds(1),
+        period:TimeSpan.FromSeconds(1)
+    );
+}
 }
