--- a/BlazorLearningKickOff/Client/wwwroot/css/app.css
+++ b/BlazorLearningKickOff/Client/wwwroot/css/app.css
@@ -180,4 +180,14 @@ app {
         /* Never collapse the sidebar for wide screens */
         display: block;
     }
+    .red-background{
+        background-color: red;
+        color:white;
+    }
+    .yellow-background
+    {
+        background-color: yellow;
+        color: black;
+    }
+
 }
