--- a/PizzaPlace/PizzaPlace/Client/Pages/Index.razor
+++ b/PizzaPlace/PizzaPlace/Client/Pages/Index.razor
@@ -1,98 +1,30 @@
 @layout MainLayout
 @using PizzaPlace.Shared
 
+
 @page "/"
 
 <!--    Start Menu -->
-@foreach (Pizza pizza in State.Menu.Pizzas)
-{
-    <div class="row">
-        <div class="col">@pizza.Name</div>
-        <div class="col">@pizza.Price</div>
-        <div class="col">
-            <img style="width: 40%;" src="@SpicinessImage(pizza.Spiciness)"
-            alt="@pizza.Spiciness"/>
-        </div>
-        <div class="col">
-            <button class="btn btn-success" 
-            @onclick="@(()=>AddToBasket(pizza))">
-            Add
-            </button>
-        </div>
-    </div>
-}
+<PizzaList  Title="Our selection of pizza"
+            Menu="@State.Menu"
+            Selected="@(async (pizza)
+            => AddToBasket(pizza))"/>
 <!--    End Menu-->
 <!-- Display Shopping Cart-->
-@if(State.Basket.Orders.Any())
-{
-    <h1>Your current shopping orders</h1>
-    @foreach (var (pizza,pos) in State.Basket.Orders.Select(
-        (id,pos)=>(State.Menu.GetPizza(id),pos)))
-    {
-        <div class="row">
-            <div class="col">@pizza.Name</div>
-            <div class="col">@pizza.Price</div>
-            <div class="col">
-                <button class="btn btn-danger"
-                @onclick="@(()=>RemoveFromBasket(pos))"
-                >
-                    Remove
-                </button>
-            </div>
-        </div>
-    }
-    <div class="row">
-        <div class="col">Total:</div>
-        <div class="col">@State.TotalPrice</div>
-        <div class="col"></div>
-    </div>
-}
+<ShoppingBasket 
+Title="Your current order"
+Basket="@State.Basket"
+GetPizzaFromId="@State.Menu.GetPizza"
+Selected="@((pos)=> RemoveFromBasket(pos))"
+/>
 <!-- End Shopping Cart-->
 <!-- Customer Entry-->
-<h1>Customer Details</h1>
-<EditForm OnValidSubmit="PlaceOrder"
-Model="State.Basket.Customer">
-<DataAnnotationsValidator/>
-<ValidationSummary/>
-<div class="form-group row mb-1">
-<label class="col-sm-3 col-form-label" 
-for="name" >Name:
-</label>
-<div class="col-sm-9">
-    <InputText class="form-control"
-    @bind-Value="@State.Basket.Customer.Name">
-    </InputText>
-    <ValidationMessage 
-    For="@(()=> State.Basket.Customer.Name)"/>
-</div>
-</div>
- <div class="form-group row mb-1">
-    <label class="col-sm-3 col-form-label"
-           for="street">Street:</label>
-    <div class="col-sm-9">
-      <InputText class="form-control"
-        @bind-Value="@State.Basket.Customer.Street" />
-      <ValidationMessage
-        For="@(() => State.Basket.Customer.Street)" />
-    </div>
-  </div>
-  <div class="form-group row mb-1">
-    <label class="col-sm-3 col-form-label"
-           for="city">City:</label>
-    <div class="col-sm-9">
-      <InputText class="form-control"
-        @bind-Value="@State.Basket.Customer.City" />
-      <ValidationMessage
-        For="@(() => State.Basket.Customer.City)" />
-    </div>
-    </div>
-  <div class="form-group mb-0">
-    <button type="submit"
-            id="checkout" class="btn btn-warning">
-      Checkout
-    </button>
-  </div>
-</EditForm>
+<CustomerEntry Title="Please enter your details below"
+               ButtonTitle="Checkout"
+               ButtonClass="btn btn-primary"
+               Customer="@State.Basket.Customer"
+               Submit="@PlaceOrder"
+               />
 <!-- End Customer Entry-->
 @code {
     private State State { get; } = new State()
